--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -12,5 +12,5 @@ i.icon-right.idpro-icon-large {
 }
 
 /*ionicone 图标*/
-.font_big{margin-left: 2px;border-left: 5px solid #808080;}
+.font_big{margin-left: 2px;border-left: 5px solid #808080;padding-top: 48px}
 .font_big li{font-size: 24px; color:#005bac; float: left;width:20%;padding-left: 7%;}
